client/css/workshop.css
.edit-button {
    text-decoration: none;
    color: var(--color-text);
    font-weight: 700;
    transition: color .3s ease-out;
}

.edit-button:hover {
    color: var(--color-fg);
}

.edit-title {
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    color: inherit;
}

.edit-content {
    height: 400px;
    width: 100%;
    font-family: inherit;
    font-size: inherit;
}

.workshop-image {
    position: relative;
    width: calc(100% - 32% - 80px);
}

.workshop-content {
    width: calc(100% - 32% - 80px);
}

.workshop-right {
    float: right;
    width: 32%;
}

.workshop-right-item {
    background-color: var(--color-bg-light);
    padding: 10px;
    margin: 0;
}

.workshop-properties {
    & a {
        color: inherit;
        text-decoration: underline;
    }

    & dd {
        margin: 0;
    }

    & dt {
        font-weight: bold;
    }
}

@media screen and (max-width: 800px) {
    .workshop-image {
        width: 100%;
    }

    .workshop-content {
        width: 100%;
    }

    .workshop-right {
        float: none;
        box-sizing: border-box;
        width: 100%;
    }
}

.workshop-input {
    width: calc(100% - 10px);
    border: 1px solid #b2b2b2;
    padding: 5px;
}

.edit-content {
    display: block;
    box-sizing: border-box;
    resize: vertical;
    border: 1px solid #b2b2b2;
    background-color: var(--color-bg);
    color: var(--color-text);
    padding: 5px;
    overflow: hidden;
}

code {
    display: block;
    background-color: var(--color-code-bg);
}

.workshop-edit-field {
    display: none;
}

.workshop-options {
    border-top: solid var(--color-bg-light) 2px;
    margin-top: 5px;
    padding-top: 5px;
}

.newsletter-sent {
    color: red;
}

.workshop-color-edit-field > * {
    margin-right: 5px;
}

